--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
 h1 {
   font-size: 60px;
   margin-left: 5%;
-  background-image: linear-gradient(90deg, rgba(191,64,191,1) 12%, rgba(0,212,255,1) 34%);
+  background-image: linear-gradient(90deg, rgba(191,64,191,1) 20%, rgba(0,212,255,1) 65%);
   background-size: 100%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
@@ -34,6 +34,12 @@ h1 {
 
 h2 {
   font-size: 35px;
+  background-image: radial-gradient(circle, rgba(0,212,255,1) 22%, rgba(191,64,191,1) 71%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
 }
 
 .score-title {
