--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   font-family: 'Bebas Neue', cursive;
   background-image: url(../images/background.jpg);
